@@ -1,6 +1,8 @@
 Revision history for Mojolicious-Plugin-OpenAPI-Modern
 
 {{$NEXT}}
+          - add config option "document_uri", to allow explicitly setting the
+            canonical uri of the OpenAPI document
 
 0.014     2025-01-26 20:26:39Z
           - fix usage of JSON::Schema::Modern::Result objects, in preparation
